@@ -16,6 +16,7 @@ NEWS:
 
 NEW: [features/enhancements]
 +Improve Python AutoIndenter to better handle brackets (patch from Jens)
++Add Copy Filename option to tab menu (patch from Michael Rans)
 
 BUG FIXES:
 +Fix Python 2.5 compatibility issue.
